--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Advanced Solana Arbitrage Telegram Bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "bignumber.js": "^9.1.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "googleapis": "^129.0.0",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
