--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,13 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/website/$1" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Content-Type", "value": "text/html; charset=utf-8" }
+      ]
+    }
   ]
 }
