--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@solana/wallet-adapter-react": "^0.15.36",
     "@solana/web3.js": "^1.78.5",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
@@ -15,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
