--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
   "dependencies": {
     "@jup-ag/api": "^6.0.40",
     "@solana/web3.js": "^1.87.6",
+    "archiver": "^7.0.1",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "bignumber.js": "^9.1.1",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "googleapis": "^129.0.0",
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
+    "pdfkit": "^0.17.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
