--- a/package.json
+++ b/package.json
@@ -39,15 +39,20 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.14.1",
+    "@types/react": "19.1.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "autoprefixer": "^10.4.21",
     "nodemon": "^3.0.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
