Update vercel.json configuration for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
   "version": 2,
-  "outputDirectory": "website"
+  "outputDirectory": "website",
+  "buildCommand": "next build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "github": {
+    "silent": false
+  }
 }
