--- a/package.json
+++ b/package.json
@@ -1,59 +1,24 @@
 {
-  "name": "solana-telegram-arb-bot",
+  "name": "solana-trading-bot",
   "version": "1.0.0",
-  "description": "Advanced Solana Arbitrage Telegram Bot",
-  "main": "index.js",
+  "description": "Solana Trading Bot with website",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "echo 'Static site - no build step needed'"
+  },
+  "keywords": [
+    "solana",
+    "trading",
+    "bot",
+    "arbitrage"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "dependencies": {
-    "@jup-ag/api": "^6.0.40",
-    "@sentry/nextjs": "^9.12.0",
-    "@sentry/node": "^9.12.0",
-    "@solana/web3.js": "^1.87.6",
-    "archiver": "^7.0.1",
-    "axios": "^1.6.2",
-    "bcrypt": "^5.1.1",
-    "bignumber.js": "^9.1.1",
-    "dotenv": "^16.5.0",
-    "envalid": "^8.0.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.5.0",
-    "googleapis": "^129.0.0",
-    "json2csv": "^6.0.0-alpha.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "next": "^15.3.0",
-    "node-cron": "^3.0.3",
-    "node-telegram-bot-api": "^0.64.0",
-    "pdfkit": "^0.17.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.1",
-    "@types/fs-extra": "^11.0.4",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.14.1",
-    "@types/react": "19.1.2",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
-    "autoprefixer": "^10.4.21",
-    "nodemon": "^3.0.1",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
   }
 }
