Simplify to minimal static site for Digital Ocean App Platform

--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
   "name": "solana-trading-bot",
   "version": "1.0.0",
-  "description": "Solana Trading Bot with website",
-  "scripts": {
-    "build": "echo 'Static site - no build step needed' && exit 0"
-  },
-  "keywords": [
-    "solana",
-    "trading",
-    "bot",
-    "arbitrage"
-  ],
-  "author": "",
-  "license": "ISC",
+  "description": "Solana Trading Bot Website",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "scripts": {
+    "build": "echo 'No build step required'"
   }
 }
