--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "scripts": {
     "build": "echo 'No build step required'"
+  },
+  "dependencies": {
+    "@netlify/functions": "^1.6.0",
+    "jsonwebtoken": "9.0.2"
   }
 }
